--- a/BLOG_COMM/packages.config
+++ b/BLOG_COMM/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Krypton.Toolkit" version="5.550.2101" targetFramework="net46" />
+  <package id="log4net" version="2.0.12" targetFramework="net46" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net46" />
   <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net46" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="86.0.4240.2200" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="87.0.4280.8800" targetFramework="net46" />
   <package id="Selenium.WebDriver.MicrosoftDriver" version="17.17134.0" targetFramework="net46" />
   <package id="SimpleBrowser" version="0.5.61.0" targetFramework="net46" />
-  <package id="SimpleBrowser.WebDriver" version="0.5.43" targetFramework="net46" />
 </packages>
