--- a/BLOG_COMM/BLOG_COMM.csproj
+++ b/BLOG_COMM/BLOG_COMM.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Class\Common.cs" />
     <Compile Include="Class\DbUtil.cs" />
     <Compile Include="Class\UserInfo.cs" />
+    <Compile Include="Class\LogRepository.cs" />
     <Compile Include="Class\UserRepository.cs" />
     <Compile Include="FormFriendReplyPop.cs">
       <SubType>Form</SubType>
